--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "tsc && ./node_modules/.bin/nightwatch --env default --config ./build/nightwatch.conf.js --verbose"
+    "test": "tsc && ./node_modules/.bin/nightwatch --env default --config ./build/nightwatch.conf.js --verbose",
+    "chrome": "tsc && ./node_modules/.bin/nightwatch --env chrome --config ./build/nightwatch.conf.js --verbose",
+    "firefox": "tsc && ./node_modules/.bin/nightwatch --env firefox --config ./build/nightwatch.conf.js --verbose"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.1.0",
-    "chromedriver": "2.43.3",
+    "@babel/preset-typescript": "7.1.0",
+    "chromedriver": "2.45.0",
     "geckodriver": "1.14.1",
-    "nightwatch": "1.0.14",
+    "nightwatch": "1.0.16",
     "selenium-server": "3.141.59",
-    "tslint-config-prettier": "^1.16.0"
+    "tslint-config-prettier": "1.17.0"
   },
   "devDependencies": {
-    "@babel/core": "7.1.6",
-    "@babel/preset-env": "7.1.6",
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.2.0",
     "@babel/register": "7.0.0",
-    "@types/nightwatch": "^0.9.11",
-    "@types/node": "^10.12.10",
-    "babel-plugin-add-module-exports": "^1.0.0",
-    "prettier": "^1.15.2",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "@types/nightwatch": "0.9.11",
+    "@types/node": "10.12.18",
+    "babel-plugin-add-module-exports": "1.0.0",
+    "prettier": "1.15.3",
+    "tslint": "5.12.0",
+    "typescript": "3.2.2"
   }
 }
