--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "7.1.0",
+    "@types/chalk": "^2.2.0",
+    "@types/fs-extra": "^5.0.4",
+    "@types/mkdirp": "^0.5.2",
+    "chalk": "^2.4.1",
     "chromedriver": "2.45.0",
+    "fs-extra": "^7.0.1",
     "geckodriver": "1.14.1",
+    "mkdirp": "^0.5.1",
     "nightwatch": "1.0.16",
     "selenium-server": "3.141.59",
     "tslint-config-prettier": "1.17.0"
