--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@babel/preset-typescript": "7.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/chromedriver": "^2.38.0",
     "@types/fs-extra": "^5.0.4",
     "@types/mkdirp": "^0.5.2",
+    "@types/webpack": "^4.4.22",
+    "@types/webpack-dev-server": "^3.1.1",
     "chalk": "^2.4.1",
-    "chromedriver": "2.45.0",
+    "chromedriver": "^2.45.0",
     "fs-extra": "^7.0.1",
     "geckodriver": "1.14.1",
     "mkdirp": "^0.5.1",
     "nightwatch": "1.0.16",
     "selenium-server": "3.141.59",
-    "tslint-config-prettier": "1.17.0"
+    "tslint-config-prettier": "1.17.0",
+    "webpack": "^4.28.1",
+    "webpack-dev-server": "^3.1.11"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/preset-env": "7.2.0",
+    "@babel/preset-env": "7.2.3",
     "@babel/register": "7.0.0",
     "@types/nightwatch": "0.9.11",
     "@types/node": "10.12.18",
