--- a/package.json
+++ b/package.json
@@ -1,48 +1,54 @@
 {
-  "name": "nightwatch-typescript-setup",
-  "author": "Andrey Morozov",
+  "name": "nightwatch-setup-ts",
+  "author": "Andrey Morozov <aandreymorozov@gmail.com>",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "postinstall": "tsc && node ./dist/index.js",
+    "postinstall": "tsc --skipLibCheck  && node ./dist/index.js",
     "build": "tsc && node ./dist/index.js",
     "test": "./node_modules/.bin/nightwatch --env default --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
-    "chrome": "tsc && ./node_modules/.bin/nightwatch --env chrome --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
+    "chrome": "tsc && ./node_modules/.bin/nightwatch --env default --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
     "firefox": "tsc && ./node_modules/.bin/nightwatch --env firefox --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
-    "node": "11.3.0",
-    "yarn": "1.12.3"
+    "node": "^11.0.0",
+    "yarn": "^1.10.0"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
-    "chromedriver": "^2.46.0",
-    "fs-extra": "^7.0.1",
-    "geckodriver": "1.16.0",
-    "mkdirp": "^0.5.1",
+    "chalk": "2.4.2",
+    "chromedriver": "2.46.0",
+    "fs-extra": "7.0.1",
+    "geckodriver": "1.16.2",
+    "mkdirp": "0.5.1",
     "nightwatch": "1.0.19",
     "selenium-server": "3.141.59",
-    "tslint-config-prettier": "1.18.0",
-    "webpack": "^4.29.6",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "4.30.0",
+    "webpack-dev-server": "3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.4.0",
-    "@babel/preset-env": "7.4.2",
+    "@babel/core": "7.4.3",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-typescript": "7.3.3",
     "@babel/register": "7.4.0",
-    "@types/chromedriver": "^2.38.0",
-    "@types/fs-extra": "^5.0.5",
-    "@types/mkdirp": "^0.5.2",
+    "@types/chromedriver": "2.38.0",
+    "@types/fs-extra": "5.0.5",
+    "@types/mkdirp": "0.5.2",
     "@types/nightwatch": "0.9.12",
-    "@types/node": "11.11.5",
-    "@types/webpack": "^4.4.26",
-    "@types/webpack-dev-server": "^3.1.4",
+    "@types/node": "11.13.4",
+    "@types/webpack": "4.4.27",
+    "@types/webpack-dev-server": "3.1.5",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
     "babel-plugin-add-module-exports": "1.0.0",
-    "prettier": "1.16.4",
-    "tslint": "5.14.0",
-    "typescript": "3.3.4000"
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-import-resolver-babel-module": "5.0.1",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-eslint-comments": "3.1.1",
+    "eslint-plugin-import": "2.17.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "prettier": "1.17.0",
+    "typescript": "3.4.3"
   }
 }
