Not skipping typecheck

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "postinstall": "tsc --skipLibCheck  && node ./dist/index.js",
+    "postinstall": "tsc && node ./dist/index.js",
     "build": "tsc && node ./dist/index.js",
     "test": "./node_modules/.bin/nightwatch --env default --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
     "chrome": "tsc && ./node_modules/.bin/nightwatch --env default --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
@@ -17,6 +17,13 @@
     "yarn": "^1.10.0"
   },
   "dependencies": {
+    "@types/chromedriver": "2.38.0",
+    "@types/fs-extra": "5.0.5",
+    "@types/mkdirp": "0.5.2",
+    "@types/nightwatch": "0.9.12",
+    "@types/node": "11.13.4",
+    "@types/webpack": "4.4.27",
+    "@types/webpack-dev-server": "3.1.5",
     "chalk": "2.4.2",
     "chromedriver": "2.46.0",
     "fs-extra": "7.0.1",
@@ -32,14 +39,7 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-typescript": "7.3.3",
     "@babel/register": "7.4.0",
-    "@types/chromedriver": "2.38.0",
-    "@types/fs-extra": "5.0.5",
-    "@types/mkdirp": "0.5.2",
-    "@types/nightwatch": "0.9.12",
-    "@types/node": "11.13.4",
-    "@types/webpack": "4.4.27",
-    "@types/webpack-dev-server": "3.1.5",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
     "babel-plugin-add-module-exports": "1.0.0",
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
