--- a/package.json
+++ b/package.json
@@ -1,54 +1,23 @@
 {
-  "name": "nightwatch-setup-ts",
-  "author": "Andrey Morozov <aandreymorozov@gmail.com>",
-  "version": "1.0.6",
-  "license": "MIT",
+  "name": "automation-setup-ts",
+  "version": "1.0.0",
+  "description": "Scaffold your automation test suite with most popular frameworks",
+  "main": "index.js",
   "scripts": {
-    "postinstall": "tsc && node ./dist/index.js",
-    "build": "tsc && node ./dist/index.js",
-    "test": "./node_modules/.bin/nightwatch --env default --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
-    "chrome": "tsc && ./node_modules/.bin/nightwatch --env default --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose",
-    "firefox": "tsc && ./node_modules/.bin/nightwatch --env firefox --config ./dist/__tests__/e2e/nightwatch.conf.js --verbose"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "engines": {
-    "node": "^11.0.0",
-    "yarn": "^1.10.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aamorozov/automation-setup-ts.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aamorozov/automation-setup-ts/issues"
+  },
+  "homepage": "https://github.com/aamorozov/automation-setup-ts#readme",
   "dependencies": {
-    "@types/chromedriver": "2.38.0",
-    "@types/fs-extra": "8.1.0",
-    "@types/mkdirp": "1.0.0",
-    "@types/nightwatch": "1.1.3",
-    "@types/node": "13.9.0",
-    "@types/webpack": "4.41.7",
-    "@types/webpack-dev-server": "3.10.0",
-    "chalk": "3.0.0",
-    "chromedriver": "80.0.1",
-    "fs-extra": "8.1.0",
-    "geckodriver": "1.19.1",
-    "mkdirp": "1.0.3",
-    "nightwatch": "1.3.4",
-    "selenium-server": "3.141.59",
-    "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3"
-  },
-  "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/preset-env": "7.8.7",
-    "@babel/preset-typescript": "7.8.3",
-    "@babel/register": "7.8.6",
-    "@typescript-eslint/eslint-plugin": "2.23.0",
-    "babel-plugin-add-module-exports": "1.0.2",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-import-resolver-babel-module": "5.1.2",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-eslint-comments": "3.1.2",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-prettier": "3.1.2",
-    "prettier": "1.19.1",
-    "typescript": "3.8.3"
+    "lerna": "^3.20.2"
   }
 }
